# mycobot_pro_600_opencv

./: README.md
aruco_pose_mapping/: CMakeLists.txt  package.xml
aruco_pose_mapping/src/: calibration_chessboard.yaml  camera_calibration.py  get_images.py  pose_estimation.py  pose_estimation2.py  pose_estimation3.py
aruco_ros/: CMakeLists.txt  package.xml
aruco_ros/scripts/: arc_markers.py  aruco_coord.py  calibration_chessboard.yaml  camera_calibration.py  get_images.py  pose_estimation.py
cpp_planning/: CMakeLists.txt  package.xml
cpp_planning/src/: cpp_planning.cpp
log/: latest_list
move_to_target/: CMakeLists.txt  package.xml
move_to_target/src/: jointstate_reader.py  move_pose.cpp  move_to_target (copy).cpp  move_to_target.cpp  move_waypoints.cpp  read_jointstates.cpp
mycobot_600_moveit_config/: .setup_assistant  package.xml
mycobot_600_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  mycobot_600.ros2_control.xacro  mycobot_600.srdf  mycobot_600.urdf.xacro  ros2_controllers.yaml
mycobot_600_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
mycobot_600_planner_cpp/: CMakeLists.txt  package.xml
mycobot_600_planner_cpp/src/: hello_world.cpp
mycobot_pro_600_description/: CMakeLists.txt  package.xml
mycobot_pro_600_description/config/: display.rviz
mycobot_pro_600_description/launch/: display.launch.py  gazebo.launch.py
mycobot_pro_600_description/log/: latest_list
mycobot_pro_600_description/meshes/: base_link.stl  link_1_1.stl  link_2_1.stl  link_4_1.stl  link_5_1.stl  link_6_1.stl
mycobot_pro_600_description/urdf/: materials.xacro  mycobot_pro_600.gazebo  mycobot_pro_600.trans  mycobot_pro_600.urdf  mycobot_pro_600.xacro
mycobot_pro_600_desp/: CMakeLists.txt  package.xml
mycobot_pro_600_desp/launch/: display.launch.py
mycobot_pro_600_desp/urdf/: mycobot_pro_600.urdf
mycobot_pro_600_moveit_config/: .setup_assistant  package.xml
mycobot_pro_600_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  mycobot_600.ros2_control.xacro  mycobot_600.srdf  mycobot_600.urdf.xacro  ros2_controllers.yaml
mycobot_pro_600_moveit_config/launch/: demo.launch.py  manupulation_task.launch.py  move_group.launch.py  moveit.rviz  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
